--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,14 @@
     ],
     "minimum-stability": "stable",
     "require-dev": {
-        "phpunit/phpunit": "~5.1"
+        "phpunit/phpunit": "5.3.4"
     },
     "autoload": {
         "psr-4": {
             "DeKey\\Tester\\": "src"
         }
+    },
+    "require": {
+        "satooshi/php-coveralls": "^1.0"
     }
 }
