--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
   - mkdir -p build/logs
+  - pwd
+  - ls
 
 script:
  - php vendor/bin/phpunit --configuration phpunit.xml --coverage-clover build/logs/clover.xml
