--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
         }
     ],
     "minimum-stability": "stable",
+    "require": {
+        "php": ">=5.6.0",
+        "satooshi/php-coveralls": "^1.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "5.3.4"
     },
@@ -17,8 +21,5 @@
         "psr-4": {
             "DeKey\\Tester\\": "src"
         }
-    },
-    "require": {
-        "satooshi/php-coveralls": "^1.0"
     }
 }
