--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,34 @@
 {
     "name": "dekeysoft/pu-tester",
-    "description": "Simple tester class designed to write BDD-style PHPUnit tests. Allows to express what test intended to check in human-readable format.",
+    "description": "Simple tester class designed to write PHPUnit tests in BDD-style. Allows to express what test intended to check in human-readable format.",
     "type": "library",
     "license": "MIT",
+    "keywords": [
+        "PHPUnit",
+        "BDD",
+        "tests",
+        "tester",
+        "extension",
+        "unit tests"
+    ],
     "authors": [
         {
             "name": "Dmitry Kolodko",
-            "email": "deathangel138@gmail.com"
+            "email": "dangel.dekey@gmail.com"
         }
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=5.6.0",
-        "satooshi/php-coveralls": "^1.0"
+        "php": "^5.6|^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.3.4"
+        "phpunit/phpunit": "5.6.*",
+        "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "DeKey\\Tester\\": "src"
+            "DeKey\\Tester\\": "src",
+            "Tests\\DeKey\\Tester\\": "tests"
         }
     }
 }
