--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,15 @@
     "authors": [
         {
             "name": "Dmitry Kolodko",
-            "email": "dangel.dekey@gmail.com"
+            "email": "prowwid@gmail.com"
         }
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^5.6|^7.0"
+        "php": "^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.6.*",
+        "phpunit/phpunit": "^6.2",
         "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
