#4: initial migration to CodeSpecsCore.
- removed tests tat duplicate core tests
- removed deprecated code from previous major release as new major release should not include previously deprecated code
- deprecated classes and methods that removed or renamed but kept for BC

____
Add core except of duplicated code
https://github.com/php-kitchen/code-specs/issues/4

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
 
 before_script:
   - composer self-update
+  - composer global require hirak/prestissimo
   - composer install --prefer-source --no-interaction --dev
   - mkdir -p build/logs
   - pwd
