--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.0"
+        "php": "^7.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
@@ -27,8 +27,8 @@
     },
     "autoload": {
         "psr-4": {
-            "DeKey\\Tester\\": "src",
-            "Tests\\DeKey\\Tester\\": "tests"
+            "PHPKitchen\\CodeSpecs\\": "src",
+            "Tests\\": "tests"
         }
     }
 }
