#4: updated docs and added core 3.0 as dependency.
____
Add core except of duplicated code
https://github.com/php-kitchen/code-specs/issues/4

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,9 @@ before_script:
   - composer global require hirak/prestissimo
   - composer install --prefer-source --no-interaction --dev
   - mkdir -p build/logs
-  - pwd
-  - ls
 
 script:
- - php vendor/bin/phpunit --configuration phpunit.xml --coverage-clover build/logs/clover.xml tests
+ - php vendor/bin/phpunit --configuration tests/phpunit.xml --coverage-clover build/logs/clover.xml tests
 
 after_script:
  - php vendor/bin/coveralls -v
