--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.1",
-        "php-kitchen/code-specs-core": "3.0.*"
+        "php-kitchen/code-specs-core": "3.0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
