--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.1",
-        "php-kitchen/code-specs-core": "3.0.*"
+        "php": "^7.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
-        "satooshi/php-coveralls": "^1.0"
+        "satooshi/php-coveralls": "^1.0",
+        "codeception/codeception": "^2.3"
     },
     "autoload": {
         "psr-4": {
