--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: php
 
-php:
-  - '7.1'
+matrix:
+  include:
+    - php: 7.1
+      env: TO_TEST=PHPUNIT
+    - php: 7.1
+      env: TO_TEST=CODECEPTION
+  fast_finish: true
 
 before_script:
   - composer self-update
@@ -10,10 +15,5 @@ before_script:
   - mkdir -p build/logs
 
 script:
- - php vendor/bin/phpunit --configuration tests/phpunit.xml --coverage-clover build/logs/clover.xml tests
-
-after_script:
- - php vendor/bin/coveralls -v
-
-after_success:
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
+ - if [ "$TO_TEST" = "PHPUNIT" ]; then php vendor/bin/phpunit --configuration tests/phpunit.xml --coverage-clover build/logs/clover.xml tests; fi
+ - if [ "$TO_TEST" = "CODECEPTION" ]; then cd tests/Integrational && php ../../vendor/bin/codecept run Unit; fi
