--- a/composer.json
+++ b/composer.json
@@ -22,18 +22,17 @@
     },
     "authors": [
         {
-            "name": "Dmitry Kolodko",
-            "email": "prowwid@gmail.com"
+            "name": "Dima Kolodko",
+            "email": "dima@kolodko.pro"
         }
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.1"
+        "php": "^7.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2",
-        "satooshi/php-coveralls": "^1.0",
-        "codeception/codeception": "^2.3"
+        "phpunit/phpunit": "^9.1",
+        "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4": {
