#8: updated internal asserts to phpunit 9.5
----
Support phpunit 9
https://github.com/php-kitchen/code-specs/issues/8

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ composer.phar
 
 # phpunit itself is not needed
 phpunit.phar
-
+.phpunit.result.cache
 
 #Vagrant files and directories
 /.vagrant
