--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,13 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "ext-dom": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.1",
-        "satooshi/php-coveralls": "^1.0"
+        "phpunit/phpunit": "^9.5",
+        "satooshi/php-coveralls": "^1.0",
+        "dms/phpunit-arraysubset-asserts": "^0.3"
     },
     "autoload": {
         "psr-4": {
